# ChangeLog for media-fonts/terminus-font
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.5 2003/07/30 14:33:34 usata Exp $

*terminus-font-4.03 (30 Jul 2003)

  30 Jul 2003; Mamoru KOMACHI <usata@gentoo.org> terminus-font-4.03.ebuild:
  New version. Tidy up ebuild according to the change in source package
  structure. Thanks to Yuri Enshin <kot@formoza-centre.ru> in bug #23500.

*terminus-font-4.00-r2 (24 Apr 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*terminus-fonts-4.00 (23 Apr 2003)

  24 Apr 2003; Tom Payne <twp@gentoo.org> terminus-fonts-4.00-r2.ebuild :

  Added pkg_postrm. Thanks Paul Totterman.

  23 Apr 2003; Tom Payne <twp@gentoo.org> terminus-fonts-4.00-r1.ebuild :

  Fix pkg_postinst.

  23 Apr 2003; Tom Payne <twp@gentoo.org> terminus-fonts-4.00.ebuild :

  Initial version. Ebuild submitted by Paul Totterman. Bug # 18639.