@@ -1,8 +1,7 @@
-MD5 f5b3e2fe0947b4c74c2162bc5646cf64 ChangeLog 1003
+MD5 683e604b5ce92d79a2373f302b27fcb8 ChangeLog 1174
 MD5 847f7c48a960b21d84388dafd45071ff terminus-font-4.00-r2.ebuild 1083
 MD5 c2263c50bd640db9bc9dc45e11698223 terminus-font-4.03.ebuild 1065
-MD5 d222ef7747c58d5e5b70c04b620eb67e terminus-font-4.03-r1.ebuild 1176
-MD5 c2263c50bd640db9bc9dc45e11698223 terminus-font-4.03-r1.ebuild~ 1065
+MD5 3b5464739ef6c2c99b45251f722a5ad7 terminus-font-4.03-r1.ebuild 1296
 MD5 09de09ced8da2fd4cc3602c9b192f9ff files/digest-terminus-font-4.00-r2 142
 MD5 730f29f4145cfd2bfe00ac8986b27640 files/digest-terminus-font-4.03 70
 MD5 a76fa0ef0f4c837546b0a0d1f86941e6 files/digest-terminus-font-4.03-r1 135
