@@ -1,0 +1,2 @@
+MD5 b24a2be0e9f966962fb08b1f49b8ec1b terminus-font-4.03.tar.gz 114366
+MD5 9092b05ea8a049eba249882c896a61b3 courier-like-a.diff.gz 2070
