@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/terminus-font
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.5 2003/07/30 14:33:34 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.6 2003/09/26 05:17:28 mkennedy Exp $
+
+*terminus-font-4.03-r1 (26 Sep 2003)
+
+  26 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org>
+  terminus-font-4.03-r1.ebuild:
+  add upstream authors courier-like a patch
 
 *terminus-font-4.03 (30 Jul 2003)
 
